rename class no. 9

--- a/landing-pages/host-protection-insurance.html
+++ b/landing-pages/host-protection-insurance.html
@@ -28,7 +28,7 @@
     <div role="main" id="site-content">
       <section>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206263"
         >
           <div class="flex-items">
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206264"
         >
           <div class="flex-items">
@@ -144,7 +144,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_234549"
         >
           <div class="flex-items">
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_234551"
         >
           <div class="flex-items">
@@ -201,7 +201,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_207740"
         >
           <div class="flex-items">
@@ -232,7 +232,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206727"
         >
           <div class="flex-items">
@@ -389,7 +389,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_249200"
         >
           <div class="flex-items">
@@ -415,7 +415,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_208277"
         >
           <div class="flex-items">
@@ -431,7 +431,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206746"
         >
           <div class="flex-items">
@@ -466,7 +466,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206273"
         >
           <div class="flex-items">
@@ -569,7 +569,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_207742"
         >
           <div class="flex-items">
@@ -585,7 +585,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206276"
         >
           <div class="flex-items">
@@ -616,7 +616,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206745"
         >
           <div class="flex-items">
@@ -705,7 +705,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_207741"
         >
           <div class="flex-items">
@@ -725,7 +725,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_234550"
         >
           <div class="flex-items">
@@ -756,7 +756,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_208279"
         >
           <div class="flex-items">
@@ -772,7 +772,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_249206"
         >
           <div class="flex-items">
@@ -803,7 +803,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_249209"
         >
           <div class="flex-items">
@@ -935,7 +935,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_208481"
         >
           <div class="flex-items">
@@ -951,7 +951,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206281"
         >
           <div class="flex-items">
@@ -999,7 +999,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_208482"
         >
           <div class="flex-items">
@@ -1015,7 +1015,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206282"
         >
           <div class="flex-items">
@@ -1188,7 +1188,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_206266"
         >
           <div class="flex-items">
