--- a/landing-pages/onlinehost.html
+++ b/landing-pages/onlinehost.html
@@ -28,7 +28,7 @@
     <div role="main" id="site-content">
       <section>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_215999"
         >
           <div class="flex-items">
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216201"
         >
           <div class="flex-items">
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216200"
         >
           <div class="flex-items">
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216001"
         >
           <div class="flex-items">
@@ -218,7 +218,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216002"
         >
           <div class="flex-items">
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216003"
         >
           <div class="flex-items">
@@ -274,7 +274,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216006"
         >
           <div class="flex-items">
@@ -290,7 +290,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216007"
         >
           <div class="flex-items">
@@ -483,7 +483,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216008"
         >
           <div class="flex-items">
@@ -548,7 +548,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216009"
         >
           <div class="flex-items">
@@ -564,7 +564,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216010"
         >
           <div class="flex-items">
@@ -610,7 +610,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_219385"
         >
           <div class="flex-items">
@@ -650,7 +650,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216011"
         >
           <div class="flex-items">
@@ -756,7 +756,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216012"
         >
           <div class="flex-items">
@@ -859,7 +859,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216015"
         >
           <div class="flex-items">
@@ -964,7 +964,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216016"
         >
           <div class="flex-items">
@@ -1068,7 +1068,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216057"
         >
           <div class="flex-items">
@@ -1084,7 +1084,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216148"
         >
           <div class="flex-items">
@@ -1106,7 +1106,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216017"
         >
           <div class="flex-items">
@@ -1171,7 +1171,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216018"
         >
           <div class="flex-items">
@@ -1187,7 +1187,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216019"
         >
           <div class="flex-items">
@@ -1246,7 +1246,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216039"
         >
           <div class="flex-items">
@@ -1262,7 +1262,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216038"
         >
           <div class="flex-items">
@@ -1517,7 +1517,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216149"
         >
           <div class="flex-items">
@@ -1533,7 +1533,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216058"
         >
           <div class="flex-items">
@@ -1553,7 +1553,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216059"
         >
           <div class="flex-items">
@@ -1618,7 +1618,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216061"
         >
           <div class="flex-items">
@@ -1634,7 +1634,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216060"
         >
           <div class="flex-items">
@@ -1693,7 +1693,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216062"
         >
           <div class="flex-items">
@@ -1709,7 +1709,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216071"
         >
           <div class="flex-items">
@@ -1903,7 +1903,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216073"
         >
           <div class="flex-items">
@@ -1948,7 +1948,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216082"
         >
           <div class="flex-items">
@@ -1964,7 +1964,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216072"
         >
           <div class="flex-items">
@@ -2010,7 +2010,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216083"
         >
           <div class="flex-items">
@@ -2026,7 +2026,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216070"
         >
           <div class="flex-items">
@@ -2387,7 +2387,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216085"
         >
           <div class="flex-items">
@@ -2403,7 +2403,7 @@
           </div>
         </div>
         <div
-          data-veloute="landing_page_section_undefined"
+          data-veloute="hero-image"
           id="section_id_216084"
         >
           <div class="flex-items">
