--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -42,7 +42,7 @@
                 <div role="main" id="site-content">
                   <section>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106043"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -60,7 +60,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105913"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -135,7 +135,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105914"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -200,7 +200,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106017"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -218,7 +218,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105915"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -256,7 +256,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105916"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -367,7 +367,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106025"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -385,7 +385,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106026"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -403,7 +403,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105918"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -453,7 +453,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105919"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -573,7 +573,7 @@ Cape Town, South Africa"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106027"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -591,7 +591,7 @@ Cape Town, South Africa"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105923"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -640,7 +640,7 @@ Cape Town, South Africa"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105924"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -760,7 +760,7 @@ Rome, Italy"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106028"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -778,7 +778,7 @@ Rome, Italy"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105927"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -828,7 +828,7 @@ Rome, Italy"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105928"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -945,7 +945,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106029"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -963,7 +963,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105929"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1013,7 +1013,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105930"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1131,7 +1131,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106031"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1149,7 +1149,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105943"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1186,7 +1186,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105947"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1251,7 +1251,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105944"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1502,7 +1502,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106032"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1520,7 +1520,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105948"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1557,7 +1557,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105970"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1666,7 +1666,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106034"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1684,7 +1684,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106035"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1702,7 +1702,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105994"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1737,7 +1737,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105995"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1816,7 +1816,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106036"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1834,7 +1834,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105996"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1871,7 +1871,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_105997"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -2630,7 +2630,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106037"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -2648,7 +2648,7 @@ Harlem, New York City"
                       </div>
                     </div>
                     <div
-                      data-veloute="landing_page_section_undefined"
+                      data-veloute="hero-image"
                       id="section_id_106044"
                     >
                       <div class="flex-before-after dir dir-ltr">
