--- a/landing-pages/covidsafety.html
+++ b/landing-pages/covidsafety.html
@@ -70,7 +70,7 @@
                 <div role="main" id="site-content">
                   <section>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274694"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -118,7 +118,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274693"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -299,7 +299,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274695"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -480,7 +480,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274718"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -498,7 +498,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274719"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -546,7 +546,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239741"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -800,7 +800,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_275050"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -818,7 +818,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239529"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -842,7 +842,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239749"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -860,7 +860,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239507"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -930,7 +930,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239500"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -948,7 +948,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_241287"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -966,7 +966,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274720"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1016,7 +1016,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274721"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1040,7 +1040,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_241291"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1058,7 +1058,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274722"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1128,7 +1128,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239519"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1146,7 +1146,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_241293"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1164,7 +1164,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239511"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1213,7 +1213,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_240526"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1237,7 +1237,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239512"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1255,7 +1255,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239514"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1325,7 +1325,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_241295"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1343,7 +1343,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274726"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1361,7 +1361,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239518"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1398,7 +1398,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274731"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1839,7 +1839,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_274727"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1857,7 +1857,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_239520"
                     >
                       <div class="flex-before-after dir dir-ltr">
@@ -1894,7 +1894,7 @@
                       </div>
                     </div>
                     <div
-                      data-veloute="hero-image"
+                      data-veloute="landing_page_section_undefined"
                       id="section_id_240828"
                     >
                       <div class="flex-before-after dir dir-ltr">
