--- a/landing-pages/host-protection-insurance.html
+++ b/landing-pages/host-protection-insurance.html
@@ -262,7 +262,7 @@
                                 "
                               >
                                 <img
-                                  class="image-default"
+                                  class="img-full"
                                   aria-hidden="true"
                                   alt=""
                                   decoding="async"
@@ -331,7 +331,7 @@
                                 "
                               >
                                 <img
-                                  class="image-default"
+                                  class="img-full"
                                   aria-hidden="true"
                                   alt=""
                                   decoding="async"
