--- a/landing-pages/onlinehost.html
+++ b/landing-pages/onlinehost.html
@@ -183,7 +183,7 @@
                                   aria-label="Sample image for undefined"
                                 >
                                   <img
-                                    class="image-default"
+                                    class="img-full"
                                     aria-hidden="true"
                                     alt="Sample image for undefined"
                                     decoding="async"
@@ -320,7 +320,7 @@
                                 "
                               >
                                 <img
-                                  class="image-default"
+                                  class="img-full"
                                   aria-hidden="true"
                                   alt=""
                                   decoding="async"
@@ -377,7 +377,7 @@
                                 "
                               >
                                 <img
-                                  class="image-default"
+                                  class="img-full"
                                   aria-hidden="true"
                                   alt=""
                                   decoding="async"
@@ -435,7 +435,7 @@
                                 "
                               >
                                 <img
-                                  class="image-default"
+                                  class="img-full"
                                   aria-hidden="true"
                                   alt=""
                                   decoding="async"
@@ -513,7 +513,7 @@
                                   aria-label="Sample image for undefined"
                                 >
                                   <img
-                                    class="image-default"
+                                    class="img-full"
                                     aria-hidden="true"
                                     alt="Sample image for undefined"
                                     decoding="async"
@@ -685,7 +685,7 @@
                                   "
                                 >
                                   <img
-                                    class="image-default"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -791,7 +791,7 @@
                                   "
                                 >
                                   <img
-                                    class="image-default"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -894,7 +894,7 @@
                                   "
                                 >
                                   <img
-                                    class="image-default"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -999,7 +999,7 @@
                                   "
                                 >
                                   <img
-                                    class="image-default"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -1136,7 +1136,7 @@
                                   aria-label="Sample image for undefined"
                                 >
                                   <img
-                                    class="image-default"
+                                    class="img-full"
                                     aria-hidden="true"
                                     alt="Sample image for undefined"
                                     decoding="async"
@@ -1296,7 +1296,7 @@
                                     aria-label="Sample image for Meditate with Sheep"
                                   >
                                     <img
-                                      class="image-default"
+                                      class="img-full"
                                       aria-hidden="true"
                                       alt="Sample image for Meditate with Sheep"
                                       decoding="async"
@@ -1374,7 +1374,7 @@
                                     aria-label="Sample image for Family Baking Fun"
                                   >
                                     <img
-                                      class="image-default"
+                                      class="img-full"
                                       aria-hidden="true"
                                       alt="Sample image for Family Baking Fun"
                                       decoding="async"
@@ -1452,7 +1452,7 @@
                                     aria-label="Sample image for Secrets of Magic"
                                   >
                                     <img
-                                      class="image-default"
+                                      class="img-full"
                                       aria-hidden="true"
                                       alt="Sample image for Secrets of Magic"
                                       decoding="async"
@@ -1583,7 +1583,7 @@
                                   aria-label="Sample image for undefined"
                                 >
                                   <img
-                                    class="image-default"
+                                    class="img-full"
                                     aria-hidden="true"
                                     alt="Sample image for undefined"
                                     decoding="async"
@@ -1739,7 +1739,7 @@
                                 "
                               >
                                 <img
-                                  class="image-default"
+                                  class="img-full"
                                   aria-hidden="true"
                                   alt=""
                                   decoding="async"
@@ -1797,7 +1797,7 @@
                                 "
                               >
                                 <img
-                                  class="image-default"
+                                  class="img-full"
                                   aria-hidden="true"
                                   alt=""
                                   decoding="async"
@@ -1855,7 +1855,7 @@
                                 "
                               >
                                 <img
-                                  class="image-default"
+                                  class="img-full"
                                   aria-hidden="true"
                                   alt=""
                                   decoding="async"
